--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/smmayank/accounts/issues"
   },
-  "homepage": "https://github.com/smmayank/accounts#readme"
+  "homepage": "https://github.com/smmayank/accounts#readme",
+  "dependencies": {
+    "express": "^4.15.2"
+  }
 }
