--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "mysql": "^2.13.0",
